Do not set swscale sizeFactor to -1.

Fixes ticket #3495.